// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebsiteThemeScope — emitted variables > atelier / bootstrapDefault 1`] = `
{
  "--accent": "37 34% 92%",
  "--accent-foreground": "219 22% 13%",
  "--atelier-accent": "hsl(221 83% 53%)",
  "--atelier-brand": "hsl(221 82% 52%)",
  "--atelier-brand-soft": "hsl(221 83% 53% / 0.12)",
  "--atelier-hairline": "hsl(36 13% 81%)",
  "--atelier-ink": "hsl(219 34% 9%)",
  "--atelier-ink-brand": "hsl(220 100% 64%)",
  "--atelier-ink-cta": "hsl(38 52% 96%)",
  "--atelier-ink-cta-foreground": "hsl(219 34% 9%)",
  "--atelier-ink-hairline": "hsl(219 10% 23%)",
  "--atelier-ink-raised": "hsl(219 23% 14%)",
  "--atelier-ink-text": "hsl(38 52% 96%)",
  "--atelier-ink-text-muted": "hsl(37 3% 73%)",
  "--atelier-ink-thread": "hsl(220 100% 64%)",
  "--atelier-paper": "hsl(38 52% 96%)",
  "--atelier-paper-deep": "hsl(37 34% 92%)",
  "--atelier-text": "hsl(219 22% 13%)",
  "--atelier-text-muted": "hsl(219 9% 40%)",
  "--atelier-thread": "hsl(221 82% 52%)",
  "--background": "38 52% 96%",
  "--border": "36 13% 81%",
  "--border-strong": "219 8% 54%",
  "--card": "38 52% 96%",
  "--card-foreground": "219 22% 13%",
  "--destructive": "350 54% 45%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "219 22% 13%",
  "--input": "219 8% 54%",
  "--muted": "37 34% 92%",
  "--muted-foreground": "219 9% 40%",
  "--popover": "38 52% 96%",
  "--popover-foreground": "219 22% 13%",
  "--primary": "221 83% 53%",
  "--primary-foreground": "0 0% 100%",
  "--primary-hover": "221 86% 45%",
  "--ring": "221 83% 53%",
  "--secondary": "37 34% 92%",
  "--secondary-foreground": "219 22% 13%",
  "--success": "154 100% 24%",
  "--warning": "35 100% 29%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "hsl(38 52% 96%)",
  "--website-border": "hsl(36 13% 81%)",
  "--website-chip-bg": "hsl(225 21% 92%)",
  "--website-chip-fg": "hsl(219 22% 13%)",
  "--website-container-width": "90rem",
  "--website-cta": "hsl(221 83% 53%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(0 0% 100%)",
  "--website-cta-hover": "hsl(221 86% 45%)",
  "--website-cta-pressed": "hsl(221 100% 37%)",
  "--website-error": "hsl(350 54% 45%)",
  "--website-focus": "hsl(221 83% 53%)",
  "--website-foreground": "hsl(219 22% 13%)",
  "--website-foreground-muted": "hsl(219 9% 40%)",
  "--website-highlight": "hsl(221 83% 53%)",
  "--website-icon-fg": "hsl(221 82% 52%)",
  "--website-icon-tile": "hsl(221 83% 53% / 0.1)",
  "--website-input-border": "hsl(219 8% 54%)",
  "--website-link": "hsl(221 82% 52%)",
  "--website-primary": "221 82% 52%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 82% 52%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-success": "hsl(154 100% 24%)",
  "--website-surface": "hsl(37 34% 92%)",
  "--website-surface-muted": "hsl(37 34% 92%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > atelier / none 1`] = `
{
  "--accent": "37 34% 92%",
  "--accent-foreground": "359 19% 13%",
  "--atelier-accent": "hsl(39 100% 36%)",
  "--atelier-brand": "hsl(352 58% 34%)",
  "--atelier-brand-soft": "hsl(352 58% 34% / 0.12)",
  "--atelier-hairline": "hsl(36 13% 81%)",
  "--atelier-ink": "hsl(359 29% 9%)",
  "--atelier-ink-brand": "hsl(356 53% 61%)",
  "--atelier-ink-cta": "hsl(38 52% 96%)",
  "--atelier-ink-cta-foreground": "hsl(359 29% 9%)",
  "--atelier-ink-hairline": "hsl(4 11% 23%)",
  "--atelier-ink-raised": "hsl(359 19% 14%)",
  "--atelier-ink-text": "hsl(38 52% 96%)",
  "--atelier-ink-text-muted": "hsl(26 8% 73%)",
  "--atelier-ink-thread": "hsl(356 53% 61%)",
  "--atelier-paper": "hsl(38 52% 96%)",
  "--atelier-paper-deep": "hsl(37 34% 92%)",
  "--atelier-text": "hsl(359 19% 13%)",
  "--atelier-text-muted": "hsl(0 8% 40%)",
  "--atelier-thread": "hsl(352 58% 34%)",
  "--background": "38 52% 96%",
  "--border": "36 13% 81%",
  "--border-strong": "0 7% 55%",
  "--card": "38 52% 96%",
  "--card-foreground": "359 19% 13%",
  "--destructive": "354 100% 20%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "359 19% 13%",
  "--input": "0 7% 55%",
  "--muted": "37 34% 92%",
  "--muted-foreground": "0 8% 40%",
  "--popover": "38 52% 96%",
  "--popover-foreground": "359 19% 13%",
  "--primary": "352 58% 34%",
  "--primary-foreground": "0 0% 100%",
  "--primary-hover": "348 79% 26%",
  "--ring": "352 58% 34%",
  "--secondary": "37 34% 92%",
  "--secondary-foreground": "359 19% 13%",
  "--success": "94 69% 28%",
  "--warning": "35 100% 29%",
  "--website-accent": "36 72% 48%",
  "--website-accent-solid": "hsl(36 72% 48%)",
  "--website-background": "hsl(38 52% 96%)",
  "--website-border": "hsl(36 13% 81%)",
  "--website-chip-bg": "hsl(17 37% 91%)",
  "--website-chip-fg": "hsl(352 58% 34%)",
  "--website-container-width": "90rem",
  "--website-cta": "hsl(352 58% 34%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(0 0% 100%)",
  "--website-cta-hover": "hsl(348 79% 26%)",
  "--website-cta-pressed": "hsl(346 100% 18%)",
  "--website-error": "hsl(354 100% 20%)",
  "--website-focus": "hsl(352 58% 34%)",
  "--website-foreground": "hsl(359 19% 13%)",
  "--website-foreground-muted": "hsl(0 8% 40%)",
  "--website-highlight": "hsl(39 100% 36%)",
  "--website-icon-fg": "hsl(352 58% 34%)",
  "--website-icon-tile": "hsl(352 58% 34% / 0.1)",
  "--website-input-border": "hsl(0 7% 55%)",
  "--website-link": "hsl(352 58% 34%)",
  "--website-primary": "352 58% 34%",
  "--website-primary-muted": "hsl(352 58% 34% / 0.3)",
  "--website-primary-solid": "hsl(352 58% 34%)",
  "--website-primary-surface": "hsl(352 58% 34% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "82 22% 32%",
  "--website-secondary-solid": "hsl(82 22% 32%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-success": "hsl(94 69% 28%)",
  "--website-surface": "hsl(37 34% 92%)",
  "--website-surface-muted": "hsl(37 34% 92%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > atelier / orange 1`] = `
{
  "--accent": "37 34% 92%",
  "--accent-foreground": "19 26% 12%",
  "--atelier-accent": "hsl(44 100% 34%)",
  "--atelier-brand": "hsl(25 100% 35%)",
  "--atelier-brand-soft": "hsl(25 94% 49% / 0.12)",
  "--atelier-hairline": "hsl(36 13% 81%)",
  "--atelier-ink": "hsl(19 42% 8%)",
  "--atelier-ink-brand": "hsl(25 94% 49%)",
  "--atelier-ink-cta": "hsl(38 52% 96%)",
  "--atelier-ink-cta-foreground": "hsl(19 42% 8%)",
  "--atelier-ink-hairline": "hsl(21 14% 22%)",
  "--atelier-ink-raised": "hsl(19 27% 13%)",
  "--atelier-ink-text": "hsl(38 52% 96%)",
  "--atelier-ink-text-muted": "hsl(31 9% 73%)",
  "--atelier-ink-thread": "hsl(25 94% 49%)",
  "--atelier-paper": "hsl(38 52% 96%)",
  "--atelier-paper-deep": "hsl(37 34% 92%)",
  "--atelier-text": "hsl(19 26% 12%)",
  "--atelier-text-muted": "hsl(19 10% 39%)",
  "--atelier-thread": "hsl(25 100% 35%)",
  "--background": "38 52% 96%",
  "--border": "36 13% 81%",
  "--border-strong": "19 9% 53%",
  "--card": "38 52% 96%",
  "--card-foreground": "19 26% 12%",
  "--destructive": "7 62% 43%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "19 26% 12%",
  "--input": "19 9% 53%",
  "--muted": "37 34% 92%",
  "--muted-foreground": "19 10% 39%",
  "--popover": "38 52% 96%",
  "--popover-foreground": "19 26% 12%",
  "--primary": "26 100% 44%",
  "--primary-foreground": "19 26% 12%",
  "--primary-hover": "22 92% 56%",
  "--ring": "26 100% 44%",
  "--secondary": "37 34% 92%",
  "--secondary-foreground": "19 26% 12%",
  "--success": "94 69% 28%",
  "--warning": "37 100% 29%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "hsl(38 52% 96%)",
  "--website-border": "hsl(36 13% 81%)",
  "--website-chip-bg": "hsl(29 73% 92%)",
  "--website-chip-fg": "hsl(25 100% 35%)",
  "--website-container-width": "90rem",
  "--website-cta": "hsl(26 100% 44%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(19 26% 12%)",
  "--website-cta-hover": "hsl(22 92% 56%)",
  "--website-cta-pressed": "hsl(20 100% 67%)",
  "--website-error": "hsl(7 62% 43%)",
  "--website-focus": "hsl(26 100% 44%)",
  "--website-foreground": "hsl(19 26% 12%)",
  "--website-foreground-muted": "hsl(19 10% 39%)",
  "--website-highlight": "hsl(44 100% 34%)",
  "--website-icon-fg": "hsl(25 100% 35%)",
  "--website-icon-tile": "hsl(25 94% 49% / 0.1)",
  "--website-input-border": "hsl(19 9% 53%)",
  "--website-link": "hsl(25 100% 35%)",
  "--website-primary": "25 100% 35%",
  "--website-primary-muted": "hsl(25 94% 49% / 0.3)",
  "--website-primary-solid": "hsl(25 100% 35%)",
  "--website-primary-surface": "hsl(25 94% 49% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "198 100% 35%",
  "--website-secondary-solid": "hsl(198 100% 35%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-success": "hsl(94 69% 28%)",
  "--website-surface": "hsl(37 34% 92%)",
  "--website-surface-muted": "hsl(37 34% 92%)",
  "--website-warning": "hsl(37 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > bold-creative / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > bold-creative / none 1`] = `
{
  "--primary": "265 85% 58%",
  "--primary-hover": "265 85% 52%",
  "--ring": "265 85% 58%",
  "--website-accent": "330 80% 60%",
  "--website-accent-solid": "hsl(330 80% 60%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "265 85% 58%",
  "--website-primary-muted": "hsl(265 85% 58% / 0.3)",
  "--website-primary-solid": "hsl(265 85% 58%)",
  "--website-primary-surface": "hsl(265 85% 58% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "22 92% 55%",
  "--website-secondary-solid": "hsl(22 92% 55%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > bold-creative / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 16px 40px -8px rgb(0 0 0 / 0.24)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / none 1`] = `
{
  "--primary": "215 60% 40%",
  "--primary-hover": "215 60% 34%",
  "--ring": "215 60% 40%",
  "--website-accent": "185 55% 40%",
  "--website-accent-solid": "hsl(185 55% 40%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "215 60% 40%",
  "--website-primary-muted": "hsl(215 60% 40% / 0.3)",
  "--website-primary-solid": "hsl(215 60% 40%)",
  "--website-primary-surface": "hsl(215 60% 40% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "205 30% 45%",
  "--website-secondary-solid": "hsl(205 30% 45%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > corporate-learning / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "90rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "2.5rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > manara / bootstrapDefault 1`] = `
{
  "--accent": "219 27% 95%",
  "--accent-foreground": "219 22% 13%",
  "--background": "219 65% 98%",
  "--border": "219 12% 88%",
  "--border-strong": "219 6% 55%",
  "--card": "219 65% 98%",
  "--card-foreground": "219 22% 13%",
  "--destructive": "350 54% 45%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "219 22% 13%",
  "--input": "219 6% 55%",
  "--mn-accent": "hsl(221 83% 53%)",
  "--mn-accent-hover": "hsl(221 86% 45%)",
  "--mn-accent-pressed": "hsl(221 100% 37%)",
  "--mn-accent-text": "hsl(219 65% 98%)",
  "--mn-beam": "hsl(221 83% 53%)",
  "--mn-beam-soft": "hsl(221 83% 53% / 0.22)",
  "--mn-block": "hsl(221 83% 53%)",
  "--mn-block-hover": "hsl(221 83% 46%)",
  "--mn-block-text": "hsl(219 65% 98%)",
  "--mn-block-text-muted": "hsl(221 100% 96%)",
  "--mn-brand-text": "hsl(221 78% 50%)",
  "--mn-day": "hsl(219 65% 98%)",
  "--mn-day-soft": "hsl(219 27% 95%)",
  "--mn-focus": "hsl(221 83% 53%)",
  "--mn-input-border": "hsl(219 6% 55%)",
  "--mn-line": "hsl(219 12% 88%)",
  "--mn-night": "hsl(220 55% 7%)",
  "--mn-night-accent-text": "hsl(221 100% 63%)",
  "--mn-night-brand": "hsl(221 100% 63%)",
  "--mn-night-focus": "hsl(221 83% 53%)",
  "--mn-night-line": "hsl(220 16% 22%)",
  "--mn-night-pill": "hsl(220 20% 18%)",
  "--mn-night-pill-text": "hsl(219 65% 98%)",
  "--mn-night-raised": "hsl(219 34% 13%)",
  "--mn-night-text": "hsl(219 65% 98%)",
  "--mn-night-text-muted": "hsl(220 7% 73%)",
  "--mn-pill": "hsl(221 78% 94%)",
  "--mn-pill-text": "hsl(221 78% 50%)",
  "--mn-text": "hsl(219 22% 13%)",
  "--mn-text-muted": "hsl(219 9% 40%)",
  "--muted": "219 27% 95%",
  "--muted-foreground": "219 9% 40%",
  "--popover": "219 65% 98%",
  "--popover-foreground": "219 22% 13%",
  "--primary": "221 83% 53%",
  "--primary-foreground": "219 65% 98%",
  "--primary-hover": "221 83% 46%",
  "--ring": "221 83% 53%",
  "--secondary": "219 27% 95%",
  "--secondary-foreground": "219 22% 13%",
  "--success": "154 100% 24%",
  "--warning": "35 100% 29%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "hsl(219 65% 98%)",
  "--website-border": "hsl(219 12% 88%)",
  "--website-chip-bg": "hsl(221 78% 94%)",
  "--website-chip-fg": "hsl(221 78% 50%)",
  "--website-container-width": "90rem",
  "--website-cta": "hsl(221 83% 53%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(219 65% 98%)",
  "--website-cta-hover": "hsl(221 86% 45%)",
  "--website-cta-pressed": "hsl(221 100% 37%)",
  "--website-error": "hsl(350 54% 45%)",
  "--website-focus": "hsl(221 83% 53%)",
  "--website-foreground": "hsl(219 22% 13%)",
  "--website-foreground-muted": "hsl(219 9% 40%)",
  "--website-highlight": "hsl(221 83% 53%)",
  "--website-icon-fg": "hsl(219 65% 98%)",
  "--website-icon-tile": "hsl(221 83% 53%)",
  "--website-input-border": "hsl(219 6% 55%)",
  "--website-link": "hsl(221 78% 50%)",
  "--website-primary": "221 78% 50%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 78% 50%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "none",
  "--website-success": "hsl(154 100% 24%)",
  "--website-surface": "hsl(219 27% 95%)",
  "--website-surface-muted": "hsl(219 27% 95%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > manara / none 1`] = `
{
  "--accent": "219 27% 95%",
  "--accent-foreground": "219 22% 13%",
  "--background": "219 65% 98%",
  "--border": "219 12% 88%",
  "--border-strong": "219 6% 55%",
  "--card": "219 65% 98%",
  "--card-foreground": "219 22% 13%",
  "--destructive": "350 54% 45%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "219 22% 13%",
  "--input": "219 6% 55%",
  "--mn-accent": "hsl(38 96% 54%)",
  "--mn-accent-hover": "hsl(34 100% 72%)",
  "--mn-accent-pressed": "hsl(33 100% 84%)",
  "--mn-accent-text": "hsl(220 54% 7%)",
  "--mn-beam": "hsl(38 96% 54%)",
  "--mn-beam-soft": "hsl(38 96% 54% / 0.22)",
  "--mn-block": "hsl(222 72% 46%)",
  "--mn-block-hover": "hsl(222 82% 40%)",
  "--mn-block-text": "hsl(219 65% 98%)",
  "--mn-block-text-muted": "hsl(222 62% 87%)",
  "--mn-brand-text": "hsl(222 72% 46%)",
  "--mn-day": "hsl(219 65% 98%)",
  "--mn-day-soft": "hsl(219 27% 95%)",
  "--mn-focus": "hsl(222 72% 46%)",
  "--mn-input-border": "hsl(219 6% 55%)",
  "--mn-line": "hsl(219 12% 88%)",
  "--mn-night": "hsl(220 54% 7%)",
  "--mn-night-accent-text": "hsl(38 96% 54%)",
  "--mn-night-brand": "hsl(221 93% 63%)",
  "--mn-night-focus": "hsl(38 96% 54%)",
  "--mn-night-line": "hsl(220 16% 22%)",
  "--mn-night-pill": "hsl(220 19% 18%)",
  "--mn-night-pill-text": "hsl(219 65% 98%)",
  "--mn-night-raised": "hsl(220 33% 13%)",
  "--mn-night-text": "hsl(219 65% 98%)",
  "--mn-night-text-muted": "hsl(220 7% 73%)",
  "--mn-pill": "hsl(221 62% 93%)",
  "--mn-pill-text": "hsl(222 72% 46%)",
  "--mn-text": "hsl(219 22% 13%)",
  "--mn-text-muted": "hsl(219 9% 40%)",
  "--muted": "219 27% 95%",
  "--muted-foreground": "219 9% 40%",
  "--popover": "219 65% 98%",
  "--popover-foreground": "219 22% 13%",
  "--primary": "222 72% 46%",
  "--primary-foreground": "219 65% 98%",
  "--primary-hover": "222 82% 40%",
  "--ring": "222 72% 46%",
  "--secondary": "219 27% 95%",
  "--secondary-foreground": "219 22% 13%",
  "--success": "154 100% 24%",
  "--warning": "35 100% 29%",
  "--website-accent": "38 96% 54%",
  "--website-accent-solid": "hsl(38 96% 54%)",
  "--website-background": "hsl(219 65% 98%)",
  "--website-border": "hsl(219 12% 88%)",
  "--website-chip-bg": "hsl(221 62% 93%)",
  "--website-chip-fg": "hsl(222 72% 46%)",
  "--website-container-width": "90rem",
  "--website-cta": "hsl(38 96% 54%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(220 54% 7%)",
  "--website-cta-hover": "hsl(34 100% 72%)",
  "--website-cta-pressed": "hsl(33 100% 84%)",
  "--website-error": "hsl(350 54% 45%)",
  "--website-focus": "hsl(222 72% 46%)",
  "--website-foreground": "hsl(219 22% 13%)",
  "--website-foreground-muted": "hsl(219 9% 40%)",
  "--website-highlight": "hsl(38 96% 54%)",
  "--website-icon-fg": "hsl(219 65% 98%)",
  "--website-icon-tile": "hsl(222 72% 46%)",
  "--website-input-border": "hsl(219 6% 55%)",
  "--website-link": "hsl(222 72% 46%)",
  "--website-primary": "222 72% 46%",
  "--website-primary-muted": "hsl(222 72% 46% / 0.3)",
  "--website-primary-solid": "hsl(222 72% 46%)",
  "--website-primary-surface": "hsl(222 72% 46% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "228 40% 18%",
  "--website-secondary-solid": "hsl(228 40% 18%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "none",
  "--website-success": "hsl(154 100% 24%)",
  "--website-surface": "hsl(219 27% 95%)",
  "--website-surface-muted": "hsl(219 27% 95%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > manara / orange 1`] = `
{
  "--accent": "19 28% 94%",
  "--accent-foreground": "19 26% 12%",
  "--background": "19 62% 98%",
  "--border": "19 12% 88%",
  "--border-strong": "19 7% 54%",
  "--card": "19 62% 98%",
  "--card-foreground": "19 26% 12%",
  "--destructive": "7 62% 43%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "19 26% 12%",
  "--input": "19 7% 54%",
  "--mn-accent": "hsl(43 96% 56%)",
  "--mn-accent-hover": "hsl(40 100% 76%)",
  "--mn-accent-pressed": "hsl(40 100% 90%)",
  "--mn-accent-text": "hsl(17 69% 6%)",
  "--mn-beam": "hsl(43 96% 56%)",
  "--mn-beam-soft": "hsl(43 96% 56% / 0.22)",
  "--mn-block": "hsl(25 100% 37%)",
  "--mn-block-hover": "hsl(25 100% 33%)",
  "--mn-block-text": "hsl(19 62% 98%)",
  "--mn-block-text-muted": "hsl(24 100% 96%)",
  "--mn-brand-text": "hsl(25 100% 33%)",
  "--mn-day": "hsl(19 62% 98%)",
  "--mn-day-soft": "hsl(19 28% 94%)",
  "--mn-focus": "hsl(26 100% 44%)",
  "--mn-input-border": "hsl(19 7% 54%)",
  "--mn-line": "hsl(19 12% 88%)",
  "--mn-night": "hsl(17 69% 6%)",
  "--mn-night-accent-text": "hsl(43 96% 56%)",
  "--mn-night-brand": "hsl(25 94% 49%)",
  "--mn-night-focus": "hsl(43 96% 56%)",
  "--mn-night-line": "hsl(17 18% 21%)",
  "--mn-night-pill": "hsl(17 22% 17%)",
  "--mn-night-pill-text": "hsl(19 62% 98%)",
  "--mn-night-raised": "hsl(19 42% 11%)",
  "--mn-night-text": "hsl(19 62% 98%)",
  "--mn-night-text-muted": "hsl(18 7% 72%)",
  "--mn-pill": "hsl(24 83% 93%)",
  "--mn-pill-text": "hsl(25 100% 33%)",
  "--mn-text": "hsl(19 26% 12%)",
  "--mn-text-muted": "hsl(19 10% 39%)",
  "--muted": "19 28% 94%",
  "--muted-foreground": "19 10% 39%",
  "--popover": "19 62% 98%",
  "--popover-foreground": "19 26% 12%",
  "--primary": "25 100% 37%",
  "--primary-foreground": "19 62% 98%",
  "--primary-hover": "25 100% 33%",
  "--ring": "26 100% 44%",
  "--secondary": "19 28% 94%",
  "--secondary-foreground": "19 26% 12%",
  "--success": "94 69% 28%",
  "--warning": "37 100% 29%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "hsl(19 62% 98%)",
  "--website-border": "hsl(19 12% 88%)",
  "--website-chip-bg": "hsl(24 83% 93%)",
  "--website-chip-fg": "hsl(25 100% 33%)",
  "--website-container-width": "90rem",
  "--website-cta": "hsl(43 96% 56%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(17 69% 6%)",
  "--website-cta-hover": "hsl(40 100% 76%)",
  "--website-cta-pressed": "hsl(40 100% 90%)",
  "--website-error": "hsl(7 62% 43%)",
  "--website-focus": "hsl(26 100% 44%)",
  "--website-foreground": "hsl(19 26% 12%)",
  "--website-foreground-muted": "hsl(19 10% 39%)",
  "--website-highlight": "hsl(43 96% 56%)",
  "--website-icon-fg": "hsl(19 62% 98%)",
  "--website-icon-tile": "hsl(25 100% 37%)",
  "--website-input-border": "hsl(19 7% 54%)",
  "--website-link": "hsl(25 100% 33%)",
  "--website-primary": "25 100% 33%",
  "--website-primary-muted": "hsl(25 94% 49% / 0.3)",
  "--website-primary-solid": "hsl(25 100% 33%)",
  "--website-primary-surface": "hsl(25 94% 49% / 0.08)",
  "--website-radius": "0.375rem",
  "--website-secondary": "198 100% 35%",
  "--website-secondary-solid": "hsl(198 100% 35%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "none",
  "--website-success": "hsl(94 69% 28%)",
  "--website-surface": "hsl(19 28% 94%)",
  "--website-surface-muted": "hsl(19 28% 94%)",
  "--website-warning": "hsl(37 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / none 1`] = `
{
  "--primary": "220 15% 15%",
  "--primary-hover": "220 15% 9%",
  "--ring": "220 15% 15%",
  "--website-accent": "14 65% 50%",
  "--website-accent-solid": "hsl(14 65% 50%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "220 15% 15%",
  "--website-primary-muted": "hsl(220 15% 15% / 0.3)",
  "--website-primary-solid": "hsl(220 15% 15%)",
  "--website-primary-surface": "hsl(220 15% 15% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "30 8% 45%",
  "--website-secondary-solid": "hsl(30 8% 45%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > minimal-editorial / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "48rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "0px",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "none",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / bootstrapDefault 1`] = `
{
  "--accent": "219 42% 94%",
  "--accent-foreground": "219 22% 13%",
  "--background": "0 0% 100%",
  "--border": "219 23% 89%",
  "--border-strong": "219 5% 59%",
  "--card": "0 0% 100%",
  "--card-foreground": "219 22% 13%",
  "--destructive": "350 54% 45%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "219 22% 13%",
  "--input": "219 5% 59%",
  "--muted": "219 42% 94%",
  "--muted-foreground": "219 9% 40%",
  "--popover": "0 0% 100%",
  "--popover-foreground": "219 22% 13%",
  "--primary": "221 83% 53%",
  "--primary-foreground": "0 0% 100%",
  "--primary-hover": "221 86% 45%",
  "--ring": "221 83% 53%",
  "--secondary": "219 54% 97%",
  "--secondary-foreground": "219 22% 13%",
  "--success": "154 100% 25%",
  "--warning": "35 100% 29%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "hsl(0 0% 100%)",
  "--website-border": "hsl(219 23% 89%)",
  "--website-chip-bg": "hsl(220 72% 93%)",
  "--website-chip-fg": "hsl(219 22% 13%)",
  "--website-container-width": "72rem",
  "--website-cta": "hsl(221 83% 53%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(0 0% 100%)",
  "--website-cta-hover": "hsl(221 86% 45%)",
  "--website-cta-pressed": "hsl(221 100% 37%)",
  "--website-error": "hsl(350 54% 45%)",
  "--website-focus": "hsl(221 83% 53%)",
  "--website-foreground": "hsl(219 22% 13%)",
  "--website-foreground-muted": "hsl(219 9% 40%)",
  "--website-highlight": "hsl(221 83% 53%)",
  "--website-icon-fg": "hsl(221 83% 53%)",
  "--website-icon-tile": "hsl(221 83% 53% / 0.1)",
  "--website-ink": "hsl(219 29% 9%)",
  "--website-ink-cta": "hsl(221 83% 53%)",
  "--website-ink-cta-foreground": "hsl(0 0% 100%)",
  "--website-ink-foreground": "hsl(0 0% 100%)",
  "--website-ink-glow": "hsl(221 83% 53% / 0.45)",
  "--website-ink-glow-detail": "hsl(221 83% 53% / 0.3)",
  "--website-ink-muted": "hsl(0 0% 100% / 0.78)",
  "--website-input-border": "hsl(219 5% 59%)",
  "--website-link": "hsl(221 83% 53%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-shape": "hsl(221 83% 53% / 0.16)",
  "--website-shape-detail": "hsl(221 83% 53%)",
  "--website-success": "hsl(154 100% 25%)",
  "--website-surface": "hsl(219 54% 97%)",
  "--website-surface-muted": "hsl(219 42% 94%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / none 1`] = `
{
  "--accent": "217 42% 94%",
  "--accent-foreground": "217 23% 13%",
  "--background": "217 100% 99%",
  "--border": "217 23% 89%",
  "--border-strong": "217 5% 58%",
  "--card": "217 100% 99%",
  "--card-foreground": "217 23% 13%",
  "--destructive": "350 54% 45%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "217 23% 13%",
  "--input": "217 5% 58%",
  "--muted": "217 42% 94%",
  "--muted-foreground": "217 9% 40%",
  "--popover": "217 100% 99%",
  "--popover-foreground": "217 23% 13%",
  "--primary": "217 87% 53%",
  "--primary-foreground": "0 0% 100%",
  "--primary-hover": "215 98% 43%",
  "--ring": "217 87% 53%",
  "--secondary": "217 54% 97%",
  "--secondary-foreground": "217 23% 13%",
  "--success": "154 100% 25%",
  "--warning": "35 100% 29%",
  "--website-accent": "38 92% 55%",
  "--website-accent-solid": "hsl(38 92% 55%)",
  "--website-background": "hsl(217 100% 99%)",
  "--website-border": "hsl(217 23% 89%)",
  "--website-chip-bg": "hsl(217 75% 93%)",
  "--website-chip-fg": "hsl(217 23% 13%)",
  "--website-container-width": "72rem",
  "--website-cta": "hsl(217 87% 53%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(0 0% 100%)",
  "--website-cta-hover": "hsl(215 98% 43%)",
  "--website-cta-pressed": "hsl(215 100% 36%)",
  "--website-error": "hsl(350 54% 45%)",
  "--website-focus": "hsl(217 87% 53%)",
  "--website-foreground": "hsl(217 23% 13%)",
  "--website-foreground-muted": "hsl(217 9% 40%)",
  "--website-highlight": "hsl(38 92% 55%)",
  "--website-icon-fg": "hsl(217 83% 51%)",
  "--website-icon-tile": "hsl(217 87% 53% / 0.1)",
  "--website-ink": "hsl(217 30% 9%)",
  "--website-ink-cta": "hsl(217 87% 53%)",
  "--website-ink-cta-foreground": "hsl(0 0% 100%)",
  "--website-ink-foreground": "hsl(0 0% 100%)",
  "--website-ink-glow": "hsl(217 87% 53% / 0.45)",
  "--website-ink-glow-detail": "hsl(38 92% 55% / 0.3)",
  "--website-ink-muted": "hsl(0 0% 100% / 0.78)",
  "--website-input-border": "hsl(217 5% 58%)",
  "--website-link": "hsl(217 83% 51%)",
  "--website-primary": "217 83% 51%",
  "--website-primary-muted": "hsl(217 87% 53% / 0.3)",
  "--website-primary-solid": "hsl(217 83% 51%)",
  "--website-primary-surface": "hsl(217 87% 53% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "173 65% 40%",
  "--website-secondary-solid": "hsl(173 65% 40%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-shape": "hsl(217 87% 53% / 0.16)",
  "--website-shape-detail": "hsl(38 92% 55%)",
  "--website-success": "hsl(154 100% 25%)",
  "--website-surface": "hsl(217 54% 97%)",
  "--website-surface-muted": "hsl(217 42% 94%)",
  "--website-warning": "hsl(35 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > modern-education / orange 1`] = `
{
  "--accent": "19 42% 93%",
  "--accent-foreground": "19 26% 12%",
  "--background": "19 100% 99%",
  "--border": "19 24% 88%",
  "--border-strong": "19 6% 57%",
  "--card": "19 100% 99%",
  "--card-foreground": "19 26% 12%",
  "--destructive": "7 62% 43%",
  "--destructive-foreground": "0 0% 100%",
  "--foreground": "19 26% 12%",
  "--input": "19 6% 57%",
  "--muted": "19 42% 93%",
  "--muted-foreground": "19 10% 39%",
  "--popover": "19 100% 99%",
  "--popover-foreground": "19 26% 12%",
  "--primary": "25 94% 49%",
  "--primary-foreground": "19 26% 12%",
  "--primary-hover": "21 100% 63%",
  "--ring": "26 100% 45%",
  "--secondary": "19 52% 96%",
  "--secondary-foreground": "19 26% 12%",
  "--success": "94 69% 28%",
  "--warning": "37 100% 29%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "hsl(19 100% 99%)",
  "--website-border": "hsl(19 24% 88%)",
  "--website-chip-bg": "hsl(23 74% 91%)",
  "--website-chip-fg": "hsl(19 26% 12%)",
  "--website-container-width": "72rem",
  "--website-cta": "hsl(25 94% 49%)",
  "--website-cta-border": "transparent",
  "--website-cta-foreground": "hsl(19 26% 12%)",
  "--website-cta-hover": "hsl(21 100% 63%)",
  "--website-cta-pressed": "hsl(19 100% 74%)",
  "--website-error": "hsl(7 62% 43%)",
  "--website-focus": "hsl(26 100% 45%)",
  "--website-foreground": "hsl(19 26% 12%)",
  "--website-foreground-muted": "hsl(19 10% 39%)",
  "--website-highlight": "hsl(43 96% 56%)",
  "--website-icon-fg": "hsl(25 100% 36%)",
  "--website-icon-tile": "hsl(25 94% 49% / 0.1)",
  "--website-ink": "hsl(19 35% 9%)",
  "--website-ink-cta": "hsl(25 94% 49%)",
  "--website-ink-cta-foreground": "hsl(19 26% 12%)",
  "--website-ink-foreground": "hsl(0 0% 100%)",
  "--website-ink-glow": "hsl(25 94% 49% / 0.45)",
  "--website-ink-glow-detail": "hsl(43 96% 56% / 0.3)",
  "--website-ink-muted": "hsl(0 0% 100% / 0.78)",
  "--website-input-border": "hsl(19 6% 57%)",
  "--website-link": "hsl(25 100% 36%)",
  "--website-primary": "25 100% 36%",
  "--website-primary-muted": "hsl(25 94% 49% / 0.3)",
  "--website-primary-solid": "hsl(25 100% 36%)",
  "--website-primary-surface": "hsl(25 94% 49% / 0.08)",
  "--website-radius": "0.75rem",
  "--website-secondary": "198 100% 35%",
  "--website-secondary-solid": "hsl(198 100% 35%)",
  "--website-section-padding": "4rem",
  "--website-shadow": "0 2px 8px -2px rgb(0 0 0 / 0.08)",
  "--website-shape": "hsl(25 94% 49% / 0.16)",
  "--website-shape-detail": "hsl(43 96% 56%)",
  "--website-success": "hsl(94 69% 28%)",
  "--website-surface": "hsl(19 52% 96%)",
  "--website-surface-muted": "hsl(19 42% 93%)",
  "--website-warning": "hsl(37 100% 29%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / bootstrapDefault 1`] = `
{
  "--primary": "221 83% 53%",
  "--primary-hover": "221 83% 47%",
  "--ring": "221 83% 53%",
  "--website-accent": "221 83% 53%",
  "--website-accent-solid": "hsl(221 83% 53%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "221 83% 53%",
  "--website-primary-muted": "hsl(221 83% 53% / 0.3)",
  "--website-primary-solid": "hsl(221 83% 53%)",
  "--website-primary-surface": "hsl(221 83% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "221 83% 53%",
  "--website-secondary-solid": "hsl(221 83% 53%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / none 1`] = `
{
  "--primary": "222 47% 25%",
  "--primary-hover": "222 47% 19%",
  "--ring": "222 47% 25%",
  "--website-accent": "350 60% 45%",
  "--website-accent-solid": "hsl(350 60% 45%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "222 47% 25%",
  "--website-primary-muted": "hsl(222 47% 25% / 0.3)",
  "--website-primary-solid": "hsl(222 47% 25%)",
  "--website-primary-surface": "hsl(222 47% 25% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "38 75% 48%",
  "--website-secondary-solid": "hsl(38 75% 48%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;

exports[`WebsiteThemeScope — emitted variables > premium-academy / orange 1`] = `
{
  "--primary": "24 95% 53%",
  "--primary-hover": "24 95% 47%",
  "--ring": "24 95% 53%",
  "--website-accent": "43 96% 56%",
  "--website-accent-solid": "hsl(43 96% 56%)",
  "--website-background": "#ffffff",
  "--website-border": "hsl(214 20% 91%)",
  "--website-container-width": "72rem",
  "--website-foreground": "hsl(222 22% 12%)",
  "--website-primary": "24 95% 53%",
  "--website-primary-muted": "hsl(24 95% 53% / 0.3)",
  "--website-primary-solid": "hsl(24 95% 53%)",
  "--website-primary-surface": "hsl(24 95% 53% / 0.08)",
  "--website-radius": "1.25rem",
  "--website-secondary": "199 89% 38%",
  "--website-secondary-solid": "hsl(199 89% 38%)",
  "--website-section-padding": "6rem",
  "--website-shadow": "0 8px 24px -4px rgb(0 0 0 / 0.12)",
  "--website-surface": "hsl(210 20% 97%)",
}
`;
